# Molecule-Designer

./: .gitignore  Cargo.toml  Periodic Table of Elements.csv  README.md  wind_turbine.txt  wind_turbine_graph.txt
src/: Material.rs  app.rs  chemistry.rs  electron.rs  main.rs  models.rs  physics.rs  tui.rs
src/chemistry/: elements.rs  mod.rs  models.rs
src/particles/: electron.rs
src/physics/: particles.rs
wiki/: References.docx  ~$ferences.docx  ~WRL1358.tmp
wiki/chemistry/: chemical bonds.txt  molecular orbital theory.txt  oxidation state.txt  valence electrons.txt
wiki/physics/: coulomb's law
