[package]
name = "material-and-process-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0", default-features = false, features = ["std"]}
tui = { version = "0", default-features = false, features = ['crossterm', 'serde']}
thiserror = "1"
modular = "1"
crossterm = "0"