[package]
name = "molecule_designer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0", default-features = false, features = ["std"]}
modular = "1"
nalgebra = "0"
#intervallum = "1"